# password-manager-2

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/exit/: page.tsx
app/main/: layout.tsx  page.tsx
components/Auth/: Base.tsx  Login.tsx  Register.tsx  index.ts  style.css
components/Backup/: BackupDialog.tsx
components/ColorSchemeManager/: ColorSchemeForm.tsx  ColorSchemeList.tsx  ColorSchemeManager.tsx  ColorSchemeTable.tsx  Context.tsx  style.css
components/Settings/: index.ts  (+2 more)
pm-core/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
pm-ui/: package-lock.json  package.json  tailwind.config.ts
src-tauri/: .env  .taurignore  Cargo.toml  tauri.conf.json  vault.db
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-04-13-132206_create_items/: down.sql  up.sql
src-tauri/migrations/2023-08-21-163428_item_tags/: down.sql  up.sql
src-tauri/migrations/2023-09-12-032922_create_color_scheme/: down.sql  up.sql
src-tauri/migrations/2023-09-12-032922_theme/: up.sql
src-tauri/migrations/2023-09-12-041833_color_scheme/: up.sql
src-tauri/migrations/2023-09-12-041833_theme/: down.sql  up.sql
src-tauri/src/: core.rs  db.rs  encrypt.rs  main.rs
src-tauri/src/core/: auth.rs  cmd.rs  config.rs  state.rs
src-tauri/src/core/cmd/: generator.rs  item.rs  theme.rs
src-tauri/src/db/: models.rs  schema.rs
src-tauri/src/db/actions/: color_scheme.rs  item.rs  theme.rs  user.rs
src-tauri/src/db/models/: color_scheme.rs  item.rs  theme.rs
src-tauri/src/encrypt/: encryptor.rs
(+237 files in other folders)
